@@ -4,6 +4,7 @@
  - Implement station order.
  - Rewrite XML map to new version with line IDs.
  - Rewrite XML map to new version without junctions.
+ - Update .travis.yml to reality.
  - Update Module::Install to 1.18 version.
  - Update author name.
  - Update copyright years to 2017.
